<?xml version="1.0"?>
<package format="2">
  <name>exotica_py</name>
  <version>0.0.0</version>
  <description>The exotica_py package</description>
  <maintainer email="v.ivan@ed.ac.uk">Vladimir Ivan</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>exotica</depend>
  <depend>pybind11</depend>
</package>
