<?xml version="1.0"?>
<package format="2">
  <name>exotica_python</name>
  <version>0.0.0</version>
  <description>Python bindings for EXOTica</description>
  <maintainer email="v.ivan@ed.ac.uk">Vladimir Ivan</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>eigen_catkin</build_depend>

  <depend>exotica</depend>
  <depend>pybind11_catkin</depend>
  <depend>moveit_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>shape_msgs</depend>
  <depend>python-matplotlib</depend>
</package>
