<?xml version="1.0"?>
<package format="2">
  <name>exotica_swig</name>
  <version>1.0.0</version>
  <description>The exotica wrappers using SWIG</description>
  <maintainer email="v.ivan@ed.ac.uk">Vladimir Ivan</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>

  <depend>exotica</depend>
  <depend>swigmake</depend>
</package>
