<?xml version="1.0"?>
<package>
  <name>kinematica</name>
  <version>0.0.1</version>
  <description>A Wrapper around the basic KDL Tree structure</description>

  <maintainer email="mcamnadur@gmail.com">michael</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>kdl_parser</build_depend>
  <run_depend>kdl_parser</run_depend>  
  <export>
  </export>
</package>
