<?xml version="1.0"?>
<package>
  <name>kinematica</name>
  <version>0.0.1</version>
  <description>A Wrapper around the basic KDL Tree structure</description>

  <maintainer email="v.ivan@ed.ac.uk">Vladimir Ivan</maintainer>
  <maintainer email="yiming.yang@ed.ac.uk">Yiming Yang</maintainer>
  <author email="mcamnadur@gmail.com">Michael Camilleri</author>

  <license>TODO</license>

  <url type="website">https://bitbucket.org/IPAB-SLMC/exotica</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>kdl_parser</build_depend>
  <run_depend>kdl_parser</run_depend>
  <export>
  </export>
</package>
