<?xml version="1.0"?>
<package>
  <name>testing_pkg</name>
  <version>0.0.1</version>
  <description>Testing Package</description>

  <maintainer email="mcamnadur@gmail.com">Michael Camilleri</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>exotica_distro</build_depend>
  <run_depend>exotica_distro</run_depend>
  <test_depend>rostest</test_depend>  
  
  <export>
  </export>
</package>
