<?xml version="1.0"?>
<package format="2">
  <name>exotica_examples</name>
  <version>4.0.0</version>
  <description>The exotica_examples package</description>

  <maintainer email="v.ivan@ed.ac.uk">Vladimir Ivan</maintainer>

  <license>BSD</license>

  <url type="website">https://bitbucket.org/IPAB-SLMC/exotica</url>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>exotica</depend>
  <depend>sensor_msgs</depend>
  <depend>ik_solver</depend>
  <depend>task_map</depend>
</package>
